<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rotas"
            android:icon="@drawable/ic_menu_directions"
            android:title="@string/string_rotas" />
        <item
            android:id="@+id/nav_grupos"
            android:icon="@drawable/ic_menu_allfriends"
            android:title="@string/string_grupos" />
        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/string_configuracoes" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_info_details"
            android:title="@string/string_sobre" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_close_clear_cancel"
            android:title="@string/string_sair" />
    </group>
</menu>
