<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.waypoints.waypoints.SobreActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="clip_horizontal|clip_vertical">

        <ImageView
            android:layout_width="297dp"
            android:layout_height="170dp"
            android:id="@+id/imageView"
            android:src="@drawable/waypoints_logo"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_waypointsteam"
            android:id="@+id/textViewWPTeam"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_ailton"
            android:id="@+id/textViewAilton"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_guilherme"
            android:id="@+id/textViewGuilherme"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_joao"
            android:id="@+id/textViewJoao"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_romulo"
            android:id="@+id/textViewRomulo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_site"
            android:id="@+id/textViewSite"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="21dp" />

    </LinearLayout>
</RelativeLayout>
