<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdicionaGrupoActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButtonLogoAdicionaGrupo"
                    android:src="@drawable/ic_person_black_24dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/editTextNomeAdicionaGrupo"
                    android:hint="@string/string_nome"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/string_ramo"
                android:id="@+id/textViewRamoAdicionaGrupo"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerRamoNovoGrupo"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmailAdicionaGrupo"
                android:layout_marginTop="15dp"
                android:hint="@string/string_email" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_planejador"
                    android:id="@+id/radioButtonPlanejadorAdicionaGrupo"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_entregador"
                    android:id="@+id/radioButtonEntregadorAdicionaGrupo"
                    android:layout_gravity="center_horizontal"
                    android:checked="false" />

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageButtonAddAdicionaGrupo"
                    android:src="@drawable/ic_add_white_24dp"
                    android:background="@drawable/ovaladdbutton"
                    android:layout_marginLeft="15dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
